# qpsi-marimo

./: .gitignore  Accessibility.md  GEMINI.md  README.md  main.py  pyproject.toml  server_marimo.sh
.github/scripts/: build.py
.github/workflows/: deploy.yml
ai/: CONTEXT.md  LOG.md  deployment_AI.md
docs/superpowers/specs/: 2026-06-24-qpsi-notebook-theming-design.md
examples/: iframe_embed.html
notebooks/: confidence_intervals.py  correlation_regression.py  diagnostic_testing.py  forest_plots.py  hypothesis_power.py  likelihood_ratios.py  measures_of_association.py  qpsi_head.html  qpsi_theme.css  roc_curves.py  screening_bias.py  survival_analysis.py
planning/: constraints.md  deployment.md  specs.md  syllabus.md
templates/: index.html.j2
