[project]
name = "qpsi-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.21.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
]

# Pin notebooks to light mode so the exported apps always match the white QPSI
# Knowledgebase, regardless of the viewer's (or the exporter's) OS dark-mode
# preference. Without this the export inherits the local user's marimo theme.
[tool.marimo.display]
theme = "light"
